--- a/EvaluacionProveedores/src/Frontera/GenerarReporte.form
+++ b/EvaluacionProveedores/src/Frontera/GenerarReporte.form
@@ -61,7 +61,7 @@
                               </Group>
                               <Component id="reporteProveedores" alignment="0" min="-2" max="-2" attributes="1"/>
                           </Group>
-                          <Component id="jButton2" alignment="0" min="-2" max="-2" attributes="1"/>
+                          <Component id="contratos" alignment="0" min="-2" max="-2" attributes="1"/>
                       </Group>
                   </Group>
               </Group>
@@ -85,7 +85,7 @@
                   </Group>
                   <Group type="102" attributes="0">
                       <EmptySpace min="-2" pref="94" max="-2" attributes="0"/>
-                      <Component id="jButton2" min="-2" max="-2" attributes="0"/>
+                      <Component id="contratos" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
@@ -179,10 +179,13 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="VerButtonEvaluacionesActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton2">
+    <Component class="javax.swing.JButton" name="contratos">
       <Properties>
         <Property name="text" type="java.lang.String" value="Reporte de Contrataciones"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="contratosActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="nit">
       <Properties>
