--- a/EvaluacionProveedores/src/Frontera/AdministrarProveedor.form
+++ b/EvaluacionProveedores/src/Frontera/AdministrarProveedor.form
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.1" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
@@ -355,6 +355,8 @@
                   </Border>
                 </Property>
               </Properties>
+
+              <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
               <SubComponents>
                 <Component class="javax.swing.JLabel" name="lblNombreCrear">
                   <Properties>
